--- a/LN-R_Intro.html
+++ b/LN-R_Intro.html
@@ -206,6 +206,22 @@ $(document).ready(function () {
 </ul>
 </div>
 </div>
+<div id="indexing" class="section level2">
+<h2>Indexing</h2>
+<ul>
+<li>In order to index or subset a string/vector of data…
+<ul>
+<li>x[i]</li>
+<li>x[i:j]</li>
+</ul></li>
+</ul>
+<pre class="r"><code>beers[1]           # bring back first order placement in vector (1)</code></pre>
+<pre><code>## [1] 1</code></pre>
+<pre class="r"><code>beers[4]           # bring back fourth order placement in vector (8)</code></pre>
+<pre><code>## [1] 8</code></pre>
+<pre class="r"><code>beers[4:6]         # bring back fourth to sixth order placements in vector (8, 2, 3)</code></pre>
+<pre><code>## [1] 8 2 3</code></pre>
+</div>
 <div id="r-package-installation" class="section level2">
 <h2>R Package Installation</h2>
 <ul>
