--- a/LN-SI.html
+++ b/LN-SI.html
@@ -855,7 +855,7 @@ ci</code></pre>
 </tbody>
 </table>
 <p><em>Hypothesis</em>:</p>
-<p><span class="math display">\[H_0: \mu \geq 120\]</span> <span class="math display">\[H_A: \mu \leq 120\]</span></p>
+<p><span class="math display">\[H_0: \mu \geq 120\]</span> <span class="math display">\[H_A: \mu &lt; 120\]</span></p>
 <p><em>Sample Statistics</em></p>
 <p><span class="math display">\[\bar{x} = \frac{121+116+110+114+105}{5} = 113.2\]</span> <span class="math display">\[s = \sqrt{\frac{(121-113.2)^2+(116-113.2)^2+(110-113.2)^2+(114-113.2)^2+(105-113.2)^2}{5-1}}=6.06\]</span></p>
 <pre class="r"><code>samp1 &lt;- c(121, 116, 110, 114, 105)
