changes ga 3 and ps 1

--- a/LN-Prob.html
+++ b/LN-Prob.html
@@ -291,7 +291,7 @@ variance</code></pre>
 </div>
 <div id="distribution-1" class="section level3">
 <h3>Distribution</h3>
-<p><span class="math display">\[h(x; n, r, N) = \frac{{m \choose x}{N-m \choose n-x}}{N \choose n}\]</span></p>
+<p><span class="math display">\[h(x; n, r, N) = \frac{{m \choose x}{x}}{{N \ choose n}}\]</span></p>
 <p>Where, <span class="math inline">\(x\)</span> = number of successes from 0 to <span class="math inline">\(\infty\)</span> in discrete movements; <span class="math inline">\(n\)</span> = number of trials; <span class="math inline">\(m\)</span> = the number of elements in the population considered a success; <span class="math inline">\(N\)</span> = number of elements in the population</p>
 <p><em>Note</em>: <span class="math inline">\({n \choose x} = \frac{n!}{x!(n-x)!}\)</span></p>
 <p><strong>Mean</strong>: <span class="math inline">\(E[X] = \frac{nm}{N}\)</span></p>
